feat: adicionado parametros para paginator e ajustado a documentação de /contas
